# tunaRound

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES.html  about.hbs  about.toml  checklist.md  context-notes.md  dist-workspace.toml  release.toml  tunaround.toml.example
.claude/: settings.json
.claude/hooks/: tuna-autoarm.py  tuna-disarm.py  tuna-session-ping.py  tuna-turn-end.py  tuna_arm.py
.gemini/: styleguide.md
.github/: build-setup.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
.tuna-docs/: routing.json
docs/: index.md
docs/archive/: index.md
docs/design/: tunaRound-v1-design.md  tunaRound-v1-design_2026-06-29.md  v2-39-dashboard-spa-daleui_2026-07-06.md  v2-40-universal-session-bus_2026-07-06.md  v2-41-activity-based-roster_2026-07-07.md  v2-42-heartbeat-presence-boss_2026-07-08.md  v2-43-target-model_2026-07-08.md  v2-44-presence-scanner-and-roles_2026-07-11.md  v2-45-mesh-persistence-and-replay_2026-07-11.md  v2-46-codex-relay_2026-07-11.md  v2-47-dashboard-observatory-backlog_2026-07-11.md  v2-48-opencode-wiring_2026-07-11.md  v2-52-refactoring-backlog_2026-07-12.md  v2-52-store-dto-contract_2026-07-12.md  v2-52-task-json-contract_2026-07-12.md  v2-54-onboarding-first-success-audit_2026-07-14.md  v2-56-mesh-discussion_2026-07-18.md  v2-A2A-core-backend_2026-06-30.md  v2-a2a-outbound-runner_2026-07-03.md  v2-a2a-partner-delegation_2026-07-02.md  v2-a2a-streaming_2026-07-03.md  v2-a2a-worker-daemon_2026-07-03.md  v2-agent-registry-uuid-tags_2026-07-04.md  v2-agentgateway-selective-adoption_2026-07-04.md  v2-broker-governance_2026-07-03.md  v2-codex-live-supervisor-appserver_2026-07-05.md  v2-context-memory-direction_2026-06-30.md  v2-deploy-onboarding_2026-07-02.md  v2-node-onboarding_2026-07-03.md  v2-orchestrator-dashboard-and-dynamic-boss_2026-07-06.md  v2-partner-orchestration-vision_2026-07-04.md  v2-temporal-validity-direction_2026-07-01.md  v2-write-delegation-design_2026-06-29.md
docs/development/: source-run.md
docs/plans/: index.md  v1-01-agent-runner.md  v1-02-claude-runner.md  v1-03-orchestrator.md  v1-04-persistence.md  v1-05-repl.md  v1-06-hardening.md  v2-01-idle-watchdog.md  v2-02-roster.md  v2-03-write-delegation.md  v2-04-session-bus.md  v2-05-session-model.md  v2-06-redis-integration.md  v2-07-bounded-debate.md  v2-08-ko-tokenizer.md  v2-09-sqlite-fts.md  v2-10-sqlite-wiring.md  v2-11-rag-injection.md  v2-12-search-command.md  v2-13-vector-hybrid.md  v2-14-agent-search-mcp.md  v2-15-windows-cli-resolve.md  v2-16-reinjection-cap.md  v2-17-http-engine-runner.md  v2-21-search-quality.md  v2-22-summary-carry-forward.md  v2-23-orchestration-tools.md  v2-24-stage2-pull-context.md  v2-25-stage3-resident-core.md  v2-26-front-equals-core.md  v2-27-post-turn-get-roster.md  v2-28-embedding-invalidation-key.md  v2-29-retrieved-caps.md  v2-30-validity-metadata.md  v2-31-validity-ranking.md  v2-32-branch-aware-ranking.md  v2-33-reindex-lint.md  v2-34-agent-registry.md  v2-35-doctor-stage4.md  v2-36-trace-runner-write-guard.md  (+9 more)
docs/prompts/: a2a-dogfood-mac-worker_2026-07-03.md  a2a-stream-smoke-mac-dispatcher_2026-07-03.md  index.md  install-with-ai.md  readme-rewrite-guide_2026-07-15.md  smoke-cross-machine_2026-07-02.md  v2-handoff_2026-06-29.md  v2-handoff_2026-06-30_session2.md  v2-handoff_2026-06-30_session3.md  v2-handoff_2026-07-01_session4.md  v2-handoff_2026-07-02_session5.md  v2-handoff_2026-07-03_mac-rc1.md  v2-handoff_2026-07-03_session6.md  v2-handoff_2026-07-03_session8-refactor.md  v2-handoff_2026-07-03_session9.md  v2-handoff_2026-07-04_session11.md  v2-handoff_2026-07-04_session12.md  v2-handoff_2026-07-04_supervised-a2a.md  v2-handoff_2026-07-06_dashboard-v2-40.md  v2-handoff_2026-07-06_mac-a2a-supervisor.md  v2-handoff_2026-07-06_orchestrator-dashboard.md  v2-handoff_2026-07-06_v2-40-release-governance.md  v2-handoff_2026-07-07_session16.md  v2-handoff_2026-07-08_mac-autoarm-philosophy.md  v2-handoff_2026-07-08_session17.md  v2-handoff_2026-07-11_session18.md  v2-handoff_2026-07-11_session19.md  v2-handoff_2026-07-11_session20.md  v2-handoff_2026-07-11_session21.md  v2-handoff_2026-07-12_session22.md  v2-handoff_2026-07-12_session23.md  v2-handoff_2026-07-12_session24.md  v2-handoff_2026-07-12_session25.md  v2-handoff_2026-07-12_session26.md  v2-handoff_2026-07-13_session27.md  v2-handoff_2026-07-14_session28.md  v2-handoff_2026-07-16_session29.md  v2-handoff_2026-07-18_session30.md  v2-handoff_2026-07-19_mac-session-longrun.md  v2-handoff_2026-07-19_session31.md  (+2 more)
docs/reference/: a2a-usage.md  agent-dev-team.md  dev-mac-windows.md  development-guidelines.md  global-claude-config-snapshot_2026-06-30.md  index.md  kiwi-windows-setup.md  mcp-tools-schema-v0.6.0.json  mesh-architecture.md  onboarding.md  release-readiness-v0.1.0_2026-07-02.md  tunaround-config.example  versioning.md
docs/reviews/: 제미나이로부터 1차 리팩토링 제안.md  코덱스로부터 1차 리팩토링 제안.md
examples/: roster.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  activity.ts  api.ts  index.css  main.tsx
scripts/: codex  codex.cmd  codex_wrapper.py  install-kiwi-mac.sh  install-kiwi-windows.sh  restart-win-mesh.ps1
src/: a2a_server.rs  a2a_wire.rs  cli.rs  cli_daemons.rs  cli_node.rs  cli_run.rs  codex_appserver.rs  codex_inject.rs  codex_relay.rs  config.rs  discover.rs  discussion.rs  lib.rs  main.rs  mcp.rs  mcp_client.rs  presence_scan.rs  roster.rs  session_bus.rs  types.rs  watch_results.rs  worker.rs
src/config/: node.rs
src/mcp/: discussion.rs  format.rs  (+6 more)
tests/: claude_runner.rs  codex_runner.rs  embed_model_compare.rs  operational_boundaries.rs  orchestrator_round.rs  real_corpus_recall.rs  search_quality.rs  search_recall.rs  store_roundtrip.rs
(+62 files in other folders)
