[package]
name = "tunaround"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
redis = { version = "0.32", default-features = false, features = ["tokio-comp", "streams"] }
kiwi-rs = { version = "0.1", optional = true }
lindera = { version = "2.3.4", features = ["embed-ko-dic"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rmcp = { version = "1.3.0", features = ["server", "macros", "schemars", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }

[features]
# 기본: 자체 완결 검색(형태소 FTS + SQLite + RAG + /search)이 cargo run으로 바로 동작.
# 가벼운 빌드는 --no-default-features. 네트워크/무거운 것(semantic 임베딩, mcp 에이전트 도구)은 opt-in.
default = ["morphology", "sqlite"]
morphology = ["dep:kiwi-rs", "dep:lindera"]
sqlite = ["dep:rusqlite"]
semantic = ["sqlite", "dep:reqwest"]
engines = ["dep:reqwest"]
mcp = ["sqlite", "dep:rmcp", "dep:schemars"]
