[package]
name = "tunaround"
version = "0.2.0"
edition = "2024"
description = "터미널에서 사람이 운전하는 역할 부여 2-에이전트 착수 전 설계 토론 도구"
repository = "https://github.com/hang-in/tunaRound"
homepage = "https://github.com/hang-in/tunaRound"
license = "AGPL-3.0-only"
# crates.io 게시 대상이 아닌 애플리케이션이라 실수로 `cargo publish`가 돌지 않게 막는다
# (release.toml의 publish=false와 belt-and-suspenders. Gemini 리뷰 반영).
publish = false

# publish=false는 cargo-dist가 바이너리를 "배포 대상 없음"으로 건너뛰게 만든다. dist=true로
# 명시해 릴리스 아티팩트(인스톨러) 빌드를 다시 켠다(cargo-dist 안내대로. crates.io 게시와는 무관).
[package.metadata.dist]
dist = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
redis = { version = "0.32", default-features = false, features = ["tokio-comp", "streams"] }
kiwi-rs = { version = "0.1", optional = true }
lindera = { version = "2.3.4", features = ["embed-ko-dic"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rmcp = { version = "1.8.0", features = ["server", "macros", "schemars", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
a2a-client = { version = "0.2", optional = true }
a2a-types = { version = "0.2", optional = true }

# watchdog가 프로세스 그룹 전체에 SIGKILL을 보내는 killpg 용(외부 kill의 음수 PID 인자 이식성 회피).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# 기본: 자체 완결 검색(형태소 FTS + SQLite + RAG + /search)이 cargo run으로 바로 동작.
# 가벼운 빌드는 --no-default-features. 네트워크/무거운 것(semantic 임베딩, mcp 에이전트 도구)은 opt-in.
default = ["morphology", "sqlite"]
morphology = ["dep:kiwi-rs", "dep:lindera"]
sqlite = ["dep:rusqlite"]
semantic = ["sqlite", "dep:reqwest"]
engines = ["dep:reqwest"]
mcp = ["sqlite", "dep:rmcp", "dep:schemars"]
# serve: HTTP MCP 서버 상주 모드(axum + rmcp streamable-http). 기본 꺼짐.
serve = ["mcp", "dep:axum", "rmcp?/transport-streamable-http-server"]
# worker: 원격 코어의 MCP HTTP 엔드포인트를 호출하는 A2A 워커 클라이언트(reqwest만 필요, 서버쪽 dep 불요).
worker = ["dep:reqwest"]
# a2a-out: 외부 표준 A2A 에이전트에게 task를 표준 위임하는 outbound 러너(A2ARunner). 기본 꺼짐.
a2a-out = ["dep:a2a-client", "dep:a2a-types"]

# cargo-dist가 릴리스 아티팩트를 빌드할 때 쓰는 프로파일(release CI의 `cargo build --profile dist`).
[profile.dist]
inherits = "release"
lto = "thin"
